--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </section>  
 
         <section id="projects" class="my-16" data-aos="fade-up">
-            <h2 class="text-2xl font-bold text-center mb-8">Other Skills and Achievements</h2>
+            <h2 class="text-2xl font-bold text-center mb-8">Other Skills and Certification</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project 1 -->
                 <div class="bg-gray-800 p-6 rounded-lg">
