--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- Projects Section -->
         <section id="projects" class="my-16" data-aos="fade-up">
             <h2 class="text-2xl font-bold text-center mb-8">Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project 1 -->
                 <div class="bg-gray-800 p-6 rounded-lg">
                     <img src="Proj 1.jpg" alt="Project One" class="w-full rounded-lg mb-4 max-h-60 object-cover">
@@ -121,7 +121,11 @@
                     <h3 class="text-2xl font-bold mb-3">Clinic Management Information System</h3>
                     <p class="text-gray-400 text-justify text-md">The Clinic Management Information System (CMIS) is a sophisticated, all-in-one solution designed to streamline the administrative, clinical, and financial operations of clinics and healthcare facilities. This system is specifically engineered to enhance patient care, improve operational efficiency, and ensure seamless management of clinical processes.</p>
                 </div>
-                <!-- Project 3 -->
+                <div class="bg-gray-800 p-6 rounded-lg">
+                    <img src="capstoneProj.png" alt="Project Two" class="w-full rounded-lg mb-4 max-h-60 object-cover">
+                    <h3 class="text-2xl font-bold mb-3">Capstone Project</h3>
+                    <p class="text-gray-400 text-justify text-md">Our capstone project is centered on developing a comprehensive system to address and resolve the operational challenges faced by Litz Auto Shop. The system aims to streamline processes, enhance efficiency, and improve overall customer service by implementing tailored solutions for the shop's specific needs.</p>
+                </div>
             </div>
         </section>  
 
